# basic-sdl

./: .gitignore  CMakeLists.txt
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
include/core/: Button.h  Texture.h  Timer.h  Window.h
include/util/: TestBase.h
src/: TestBasicRendering.cpp  TestBasicSDL2_image.cpp  TestClipRendering.cpp  TestColorKeying.cpp  TestController.cpp  TestJoystick.cpp  TestRendering.cpp  TestRenderingEx.cpp  TestSDL2.cpp  TestSound.cpp  TestTexture.cpp  TestTiming.cpp  TestVSync.cpp  main.cpp
src/core/: Button.cpp  Texture.cpp  Timer.cpp  Window.cpp
src/test/: Sample.cpp  TestAudioRecording.cpp  TestBasicRendering.cpp  TestBasicRenderingEx.cpp  TestBasicSDL2.cpp  TestBasicSDL2Image.cpp  TestController.cpp  TestFile.cpp  TestMotion.cpp  TestParticleEngines.cpp  TestRendering.cpp  TestRenderingEx.cpp  TestScrolling.cpp  TestSound.cpp  TestTextInput.cpp  TestTiming.cpp  TestWindow.cpp
src/util/: TestBase.cpp
